java9: Avoid wrapper type new deprecation warning
Replace with calls to valueOf method.

Signed-off-by: BJ Hargrave <bj@bjhargrave.com>